objects/Issue_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alcs_Investigation_Level__c</fullName>
        <label>Alcs Investigation Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Distribution__c</fullName>
        <label>Alert Distribution</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archival_Date__c</fullName>
        <label>Archival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CauseDisplayOrder__c</fullName>
        <description>Feed Outbound - Hardcode value 0.</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CauseDisplayOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CauseId__c</fullName>
        <label>CauseId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_Code__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Cause__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cause Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_Identifier__c</fullName>
        <formula>Product_Line__r.Name &amp; Issue_Type__r.Description__c &amp; Reason__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cause Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_Name__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Cause__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cause Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cause</label>
        <referenceTo>Cause__c</referenceTo>
        <relationshipLabel>Issue Hierarchies</relationshipLabel>
        <relationshipName>Issue_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClassificationDisplayOrder__c</fullName>
        <description>Feed Outbound - Hardcode value &quot;0&quot;</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification Display Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Code__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Classification__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Des__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Classification__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification Des</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Classification</label>
        <referenceTo>Classification__c</referenceTo>
        <relationshipLabel>Issue Hierarchies</relationshipLabel>
        <relationshipName>Issue_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CodeCategory__c</fullName>
        <formula>&apos;CRC&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CodeCategory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeType__c</fullName>
        <description>Feed Outbound - HardCode Value &quot;ISSUEHIERARCHY&quot;.</description>
        <formula>&apos;ISSUEHIERARCHY&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - DateFormat</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Cons_Flag__c</fullName>
        <label>CustConsFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscalateFlagFeed__c</fullName>
        <description>Feed Outbound - EscalateFlag Format Output value.</description>
        <formula>IF( Escalate_Flag__c==TRUE, &apos;1&apos;, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EscalateFlag_Feed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EscalateFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FactoryControllableFlagFeed__c</fullName>
        <description>Feed Outbound - Format Output value.</description>
        <formula>IF( Factory_Controllable_Flag__c==TRUE, &apos;1&apos;, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FactoryControllableFlag_Feed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Controllable_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Factory Controllable Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupDisplayOrder__c</fullName>
        <description>Feed Outbound - Hardcode value 0.</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupDisplayOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Code__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Group__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Desc__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Group__r.Description__c</formula>
        <label>Group Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Issue Hierarchies</relationshipLabel>
        <relationshipName>Issue_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <formula>Product_Line__r.Name &amp; &quot;|&quot; &amp;  Issue_Type__r.Description__c &amp; &quot;|&quot; &amp;  Reason__r.Description__c &amp; &quot;|&quot; &amp;  Classification__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssueTypeDisplayOrder__c</fullName>
        <description>Feed Outbound - Hardcode value 0.</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IssueTypeDisplayOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Association__c</fullName>
        <label>Issue Association</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Rollup__c</fullName>
        <label>Issue Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type_Code__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Issue_Type__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type_Name__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Issue_Type__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue Type</label>
        <referenceTo>Issue_Type__c</referenceTo>
        <relationshipLabel>Issue Hierarchies</relationshipLabel>
        <relationshipName>Issue_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manf_Investigation_Level__c</fullName>
        <label>Manf Investigation Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pqrb_Rtp_Category__c</fullName>
        <label>Pqrb Rtp Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLineDisplayOrder__c</fullName>
        <description>Feed Outbound - Hardcode value 0.</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Display Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Code__c</fullName>
        <formula>Product_Line__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Name__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Product_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>Product_Line__c</referenceTo>
        <relationshipLabel>Issue Hierarchies</relationshipLabel>
        <relationshipName>Issue_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Return_Level__c</fullName>
        <label>Product Return Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonDisplayOrder__c</fullName>
        <description>Feed Outbound - Hardcode value 0</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReasonDisplayOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Reason__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Identifier__c</fullName>
        <description>It is only for feed.</description>
        <formula>Product_Line__r.Name &amp;  Issue_Type__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Name__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Reason__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason</label>
        <referenceTo>Reason__c</referenceTo>
        <relationshipLabel>Issue Hierarchies</relationshipLabel>
        <relationshipName>Issue_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RptCategory__c</fullName>
        <label>RptCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Requirements__c</fullName>
        <label>Survey Requirements</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Product_Line__c</fullName>
        <description>It is only for Issue_Hierarchy_Outbound feed.</description>
        <formula>Product_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_With_Manf_Info__c</fullName>
        <label>Threshold With Manf Info</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_With_Prod_Desc_Only__c</fullName>
        <label>Threshold With Prod Desc Only</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Issue Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Classification_Des__c</columns>
        <columns>Product_Line_Name__c</columns>
        <columns>Issue_Type_Name__c</columns>
        <columns>Reason_Name__c</columns>
        <columns>Cause_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IH{0000}</displayFormat>
        <label>Issue Hierarchy Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>